stage0/tests/sema/veo/50_error_no_matching_function_complex.veo
func execute(a: i32, b: f64) {}

func main() {
    // expected-error@+1: no matching function for call to 'execute'
    execute(true, 'z');
}
